--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -14,20 +14,20 @@
    <string>Add Device-IP to start a connection</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="2" colspan="2">
+   <item row="3" column="2" colspan="2">
     <widget class="QLineEdit" name="addressEdit"/>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Port:</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="2" colspan="2">
+   <item row="5" column="2" colspan="2">
     <widget class="QLineEdit" name="portEdit"/>
    </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>IP-Address:</string>
@@ -47,7 +47,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="3">
+   <item row="7" column="3">
     <widget class="QPushButton" name="cancelButton">
      <property name="minimumSize">
       <size>
@@ -70,7 +70,7 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="2">
+   <item row="7" column="2">
     <widget class="QPushButton" name="okButton">
      <property name="minimumSize">
       <size>
@@ -93,7 +93,7 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
+   <item row="6" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -105,6 +105,34 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="1" column="2">
+    <widget class="QRadioButton" name="radioButton_2">
+     <property name="text">
+      <string>DynDNS</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QRadioButton" name="radioButton_3">
+     <property name="text">
+      <string>I2P-base64</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QRadioButton" name="radioButton_4">
+     <property name="text">
+      <string>IPv4</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QRadioButton" name="radioButton_5">
+     <property name="text">
+      <string>IPV6</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
