--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -7,34 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>170</height>
+    <height>318</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Device-IP to start a connection</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="2" colspan="2">
-    <widget class="QLineEdit" name="addressEdit"/>
-   </item>
-   <item row="5" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Port:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="2" colspan="2">
-    <widget class="QLineEdit" name="portEdit"/>
-   </item>
-   <item row="3" column="1">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>IP-Address:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
+   <item row="0" column="0">
     <widget class="QLabel" name="label_3">
      <property name="toolTip">
       <string>Insert IP-Adress and Port of your device you want to connect to. Be sure the port of the remote device is forwarded in the remote Nat/Router.</string>
@@ -47,7 +27,77 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="3">
+   <item row="0" column="1" colspan="2">
+    <widget class="QRadioButton" name="ipv4Button">
+     <property name="text">
+      <string>IPv4</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="0" column="3">
+    <widget class="QRadioButton" name="ipv6Button">
+     <property name="text">
+      <string>IPv6</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Nickname</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1" colspan="3">
+    <widget class="QLineEdit" name="nickEdit"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Address/Name</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1" colspan="3">
+    <widget class="QLineEdit" name="addressEdit"/>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Port:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1" colspan="3">
+    <widget class="QLineEdit" name="portEdit"/>
+   </item>
+   <item row="6" column="1" colspan="2">
+    <widget class="QRadioButton" name="constantButton">
+     <property name="text">
+      <string>Constant</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="6" column="3">
+    <widget class="QRadioButton" name="remoteButton">
+     <property name="text">
+      <string>Remote</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="7" column="2" colspan="2">
     <widget class="QPushButton" name="cancelButton">
      <property name="minimumSize">
       <size>
@@ -70,7 +120,17 @@
      </property>
     </widget>
    </item>
-   <item row="7" column="2">
+   <item row="1" column="3">
+    <widget class="QRadioButton" name="i2pButton">
+     <property name="text">
+      <string>I2P-base64</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="7" column="0" colspan="2">
     <widget class="QPushButton" name="okButton">
      <property name="minimumSize">
       <size>
@@ -93,51 +153,25 @@
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="2">
-    <widget class="QRadioButton" name="radioButton_2">
+   <item row="1" column="1">
+    <widget class="QRadioButton" name="dnsButton">
      <property name="text">
       <string>DynDNS</string>
      </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QRadioButton" name="radioButton_3">
-     <property name="text">
-      <string>I2P-base64</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="2">
-    <widget class="QRadioButton" name="radioButton_4">
-     <property name="text">
-      <string>IPv4</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QRadioButton" name="radioButton_5">
-     <property name="text">
-      <string>IPv6</string>
-     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
     </widget>
    </item>
   </layout>
  </widget>
+ <layoutdefault spacing="1" margin="1"/>
  <resources>
   <include location="../arado.qrc"/>
  </resources>
  <connections/>
+ <buttongroups>
+  <buttongroup name="typeGroup"/>
+  <buttongroup name="levelGroup"/>
+ </buttongroups>
 </ui>
