--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -80,7 +80,7 @@
    <item row="6" column="1" colspan="2">
     <widget class="QRadioButton" name="constantButton">
      <property name="text">
-      <string>Constant</string>
+      <string>Add to Constant</string>
      </property>
      <attribute name="buttonGroup">
       <string>levelGroup</string>
@@ -90,7 +90,7 @@
    <item row="6" column="3">
     <widget class="QRadioButton" name="remoteButton">
      <property name="text">
-      <string>Remote</string>
+      <string>Add to Flexible</string>
      </property>
      <attribute name="buttonGroup">
       <string>levelGroup</string>
