--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>318</height>
+    <height>250</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,37 +47,37 @@
      </attribute>
     </widget>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Nickname:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="1" colspan="3">
-    <widget class="QLineEdit" name="nickEdit"/>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>IP-Address/Name:</string>
+      <string>Nick:</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1" colspan="3">
-    <widget class="QLineEdit" name="addressEdit"/>
+    <widget class="QLineEdit" name="nickEdit"/>
    </item>
    <item row="5" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>(IP-)Address/name:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1" colspan="3">
+    <widget class="QLineEdit" name="addressEdit"/>
+   </item>
+   <item row="6" column="0">
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Port:</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="1" colspan="3">
+   <item row="6" column="1" colspan="3">
     <widget class="QLineEdit" name="portEdit"/>
    </item>
-   <item row="6" column="1" colspan="2">
+   <item row="7" column="1" colspan="2">
     <widget class="QRadioButton" name="constantButton">
      <property name="text">
       <string>Add to Constant</string>
@@ -87,7 +87,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="6" column="3">
+   <item row="7" column="3">
     <widget class="QRadioButton" name="remoteButton">
      <property name="text">
       <string>Add to Flexible</string>
@@ -97,7 +97,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="7" column="2" colspan="2">
+   <item row="8" column="2" colspan="2">
     <widget class="QPushButton" name="cancelButton">
      <property name="minimumSize">
       <size>
@@ -120,17 +120,17 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
+   <item row="2" column="3">
     <widget class="QRadioButton" name="i2pButton">
      <property name="text">
-      <string>I2P-base64</string>
+      <string>I2P</string>
      </property>
      <attribute name="buttonGroup">
       <string>typeGroup</string>
      </attribute>
     </widget>
    </item>
-   <item row="7" column="0" colspan="2">
+   <item row="8" column="0" colspan="2">
     <widget class="QPushButton" name="okButton">
      <property name="minimumSize">
       <size>
@@ -153,14 +153,21 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QRadioButton" name="dnsButton">
      <property name="text">
-      <string>DynDNS</string>
+      <string>DNS</string>
      </property>
      <attribute name="buttonGroup">
       <string>typeGroup</string>
      </attribute>
+    </widget>
+   </item>
+   <item row="1" column="2" colspan="2">
+    <widget class="QRadioButton" name="radioButton">
+     <property name="text">
+      <string>Arado-Device-ID</string>
+     </property>
     </widget>
    </item>
   </layout>
