--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -88,7 +88,7 @@
     </widget>
    </item>
    <item row="7" column="3">
-    <widget class="QRadioButton" name="remoteButton">
+    <widget class="QRadioButton" name="flexibleButton">
      <property name="text">
       <string>Add to Flexible</string>
      </property>
