--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -7,37 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>250</height>
+    <height>225</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Add Device-IP to start a connection</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="toolTip">
-      <string>Insert IP-Adress and Port of your device you want to connect to. Be sure the port of the remote device is forwarded in the remote Nat/Router.</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="../arado.qrc">:/images/server.png</pixmap>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QRadioButton" name="ipv4Button">
-     <property name="text">
-      <string>IPv4</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>typeGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="0" column="3">
+   <item row="0" column="4">
     <widget class="QRadioButton" name="ipv6Button">
      <property name="text">
       <string>IPv6</string>
@@ -47,57 +24,17 @@
      </attribute>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="8" column="1">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Nick:</string>
+      <string>Nick (Optional):</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="3">
+   <item row="8" column="2" colspan="3">
     <widget class="QLineEdit" name="nickEdit"/>
    </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>(IP-)Address/name:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="5" column="1" colspan="3">
-    <widget class="QLineEdit" name="addressEdit"/>
-   </item>
-   <item row="6" column="0">
-    <widget class="QLabel" name="label_2">
-     <property name="text">
-      <string>Port:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1" colspan="3">
-    <widget class="QLineEdit" name="portEdit"/>
-   </item>
-   <item row="7" column="1" colspan="2">
-    <widget class="QRadioButton" name="constantButton">
-     <property name="text">
-      <string>Add to Constant</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>levelGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="7" column="3">
-    <widget class="QRadioButton" name="flexibleButton">
-     <property name="text">
-      <string>Add to Flexible</string>
-     </property>
-     <attribute name="buttonGroup">
-      <string>levelGroup</string>
-     </attribute>
-    </widget>
-   </item>
-   <item row="8" column="2" colspan="2">
+   <item row="12" column="3" colspan="2">
     <widget class="QPushButton" name="cancelButton">
      <property name="minimumSize">
       <size>
@@ -120,7 +57,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="3">
+   <item row="4" column="4">
     <widget class="QRadioButton" name="i2pButton">
      <property name="text">
       <string>I2P</string>
@@ -130,7 +67,7 @@
      </attribute>
     </widget>
    </item>
-   <item row="8" column="0" colspan="2">
+   <item row="12" column="1" colspan="2">
     <widget class="QPushButton" name="okButton">
      <property name="minimumSize">
       <size>
@@ -153,7 +90,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
+   <item row="4" column="2">
     <widget class="QRadioButton" name="dnsButton">
      <property name="text">
       <string>DNS</string>
@@ -163,11 +100,90 @@
      </attribute>
     </widget>
    </item>
-   <item row="1" column="2" colspan="2">
-    <widget class="QRadioButton" name="radioButton">
+   <item row="8" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeType">
+      <enum>QSizePolicy::Minimum</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>9</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="5" column="1">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>IP/Address/Name/ID:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="2" colspan="3">
+    <widget class="QLineEdit" name="addressEdit"/>
+   </item>
+   <item row="6" column="1">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Port:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2" colspan="3">
+    <widget class="QLineEdit" name="portEdit"/>
+   </item>
+   <item row="7" column="2">
+    <widget class="QRadioButton" name="constantButton">
+     <property name="text">
+      <string>Add to Constant</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="7" column="4">
+    <widget class="QRadioButton" name="flexibleButton">
+     <property name="text">
+      <string>Add to Flexible</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>levelGroup</string>
+     </attribute>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="toolTip">
+      <string>Insert IP-Adress and Port of your device you want to connect to. Be sure the port of the remote device is forwarded in the remote Nat/Router.</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="../arado.qrc">:/images/server.png</pixmap>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QRadioButton" name="deviceidButton">
      <property name="text">
       <string>Arado-Device-ID</string>
      </property>
+    </widget>
+   </item>
+   <item row="0" column="1">
+    <widget class="QRadioButton" name="ipv4Button">
+     <property name="text">
+      <string>IPv4</string>
+     </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
     </widget>
    </item>
   </layout>
