--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -174,6 +174,9 @@
      <property name="text">
       <string>Arado-Device-ID</string>
      </property>
+     <attribute name="buttonGroup">
+      <string>typeGroup</string>
+     </attribute>
     </widget>
    </item>
    <item row="0" column="1">
