--- a/ui/connection-display.ui
+++ b/ui/connection-display.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>916</width>
+    <width>1072</width>
     <height>612</height>
    </rect>
   </property>
@@ -118,72 +118,6 @@
      <property name="value">
       <number>60</number>
      </property>
-    </widget>
-   </item>
-   <item row="8" column="0" colspan="6">
-    <widget class="QTreeWidget" name="treeWidget_A">
-     <attribute name="headerDefaultSectionSize">
-      <number>100</number>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Device-ID</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>IP</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Port</string>
-      </property>
-     </column>
-    </widget>
-   </item>
-   <item row="8" column="6" rowspan="8" colspan="4">
-    <widget class="QTreeWidget" name="treeWidget_B">
-     <attribute name="headerDefaultSectionSize">
-      <number>100</number>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Device-ID</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>IP</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Port</string>
-      </property>
-     </column>
-    </widget>
-   </item>
-   <item row="8" column="12" rowspan="8" colspan="2">
-    <widget class="QTreeWidget" name="treeWidget_C">
-     <attribute name="headerDefaultSectionSize">
-      <number>100</number>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Device-ID</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>IP</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Port</string>
-      </property>
-     </column>
     </widget>
    </item>
    <item row="18" column="6" colspan="2">
@@ -833,6 +767,72 @@
      <property name="textFormat">
       <enum>Qt::AutoText</enum>
      </property>
+    </widget>
+   </item>
+   <item row="8" column="0" colspan="6">
+    <widget class="QTableWidget" name="tableWidget_A">
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Address</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Port</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="8" column="6" rowspan="8" colspan="4">
+    <widget class="QTableWidget" name="tableWidget_B">
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Address</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Port</string>
+      </property>
+     </column>
+    </widget>
+   </item>
+   <item row="8" column="12" rowspan="8" colspan="2">
+    <widget class="QTableWidget" name="tableWidget_C">
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>New Column</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Device-ID</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Port</string>
+      </property>
+     </column>
     </widget>
    </item>
   </layout>
