--- a/ui/address-input.ui
+++ b/ui/address-input.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>225</height>
+    <width>480</width>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
    <item row="8" column="1">
     <widget class="QLabel" name="label_4">
      <property name="text">
-      <string>Nick (Optional):</string>
+      <string>Nick</string>
      </property>
     </widget>
    </item>
